--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,8 +12,7 @@ uvicorn = ">=0.34.1,<0.35.0"
 psycopg2-binary = ">=2.9.10,<3.0.0"
 dotenv = "^0.9.9"
 dj-database-url = "^2.3.0"
-sqlalchemy = "^2.0.40"
-asyncpg = "^0.30.0"
+asgiref = "^3.8.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
